<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/back2new"
    tools:context="com.example.android.dentaliquiz.MainActivity">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation = "vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/pictureHeightL"
            android:src = "@drawable/back4"
            android:scaleType="centerCrop"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/appOpening"
            android:textSize="@dimen/textSizeL"
            android:textAllCaps="true"
            android:layout_marginLeft="@dimen/padding"
            android:layout_marginRight="@dimen/padding"
            android:layout_marginTop="@dimen/padding"
            android:gravity="center_horizontal"
            android:textColor="@android:color/black"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/opening"
            android:textSize="@dimen/textSize"
            android:textAllCaps="true"
            android:padding = "@dimen/padding"
            android:gravity="center_horizontal"
            android:textColor="@android:color/black"
            />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/first"
                android:textAllCaps="true"
                android:textSize="@dimen/textSize"
                android:padding = "@dimen/padding"
                android:textColor="@android:color/black"/>

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="@dimen/padding">

                <RadioButton
                    android:id="@+id/bone_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bone" />
                <RadioButton
                    android:id="@+id/enamel_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/enamel" />
                <RadioButton
                    android:id="@+id/stones_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/stones" />
            </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/second"
            android:textAllCaps="true"
            android:textSize="@dimen/textSize"
            android:padding = "@dimen/padding"
            android:textColor="@android:color/black"/>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/padding">

            <RadioButton
                android:id="@+id/can_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/can" />
            <RadioButton
                android:id="@+id/twice_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/twice" />
            <RadioButton
                android:id="@+id/meal_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/meal" />
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/third"
            android:textAllCaps="true"
            android:textSize="@dimen/textSize"
            android:padding = "@dimen/padding"
            android:textColor="@android:color/black"/>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/padding">

            <RadioButton
                android:id="@+id/three_fact_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fact" />
            <RadioButton
                android:id="@+id/three_fiction_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fiction" />
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fourth"
            android:textAllCaps="true"
            android:textSize="@dimen/textSize"
            android:padding = "@dimen/padding"
            android:textColor="@android:color/black"/>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/padding">

            <RadioButton
                android:id="@+id/four_fact_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fact" />
            <RadioButton
                android:id="@+id/four_fiction_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fiction" />
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fifth"
            android:textAllCaps="true"
            android:textSize="@dimen/textSize"
            android:padding = "@dimen/padding"
            android:textColor="@android:color/black"/>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/padding">

            <RadioButton
                android:id="@+id/five_fact_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fact" />
            <RadioButton
                android:id="@+id/five_fiction_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fiction" />
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sixth"
            android:textAllCaps="true"
            android:textSize="@dimen/textSize"
            android:padding = "@dimen/padding"
            android:textColor="@android:color/black"/>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/padding">

            <RadioButton
                android:id="@+id/six_fact_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fact" />
            <RadioButton
                android:id="@+id/six_fiction_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fiction" />
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/seventh"
            android:textAllCaps="true"
            android:textSize="@dimen/textSize"
            android:padding = "@dimen/padding"
            android:textColor="@android:color/black"/>

        <CheckBox
            android:id="@+id/three_months_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/threemonths"
            android:layout_marginLeft="@dimen/padding"/>

        <CheckBox
            android:id="@+id/once_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/onceayear"
            android:layout_marginLeft="@dimen/padding"/>

        <CheckBox
            android:id="@+id/infectious_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/infectious"
            android:layout_marginLeft="@dimen/padding"/>

        <CheckBox
            android:id="@+id/bristles_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bristles"
            android:layout_marginLeft="@dimen/padding"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/eighth"
            android:textAllCaps="true"
            android:textSize="@dimen/textSize"
            android:padding = "@dimen/padding"
            android:textColor="@android:color/black"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/paste_ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/padding"/>

            <ImageView
                android:layout_width="@dimen/pictureWidthM"
                android:layout_height="@dimen/pictureHeightM"
                android:src="@drawable/pasteok" />

            <RadioButton
                android:id="@+id/paste"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/padding"/>

            <ImageView
                android:layout_width="@dimen/pictureWidthM"
                android:layout_height="@dimen/pictureHeightM"
                android:src="@drawable/pastel"
                android:layout_marginRight="@dimen/padding" />

        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ninth"
            android:textAllCaps="true"
            android:textSize="@dimen/textSize"
            android:layout_marginLeft="@dimen/padding"
            android:layout_marginTop="@dimen/padding"
            android:layout_marginRight="@dimen/padding"
            android:textColor="@android:color/black"/>

        <EditText
            android:id="@+id/number_of_teeth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/numberofteeth"
            android:inputType="number"
            android:layout_marginLeft="@dimen/padding"
            android:layout_marginBottom="@dimen/padding"
            android:textColor="@android:color/black"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/submit_score"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text = "@string/seeScore"
                android:padding="@dimen/padding"
                android:onClick="submitScore"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/submit_recommendations"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text = "@string/recommendations"
                android:padding="@dimen/padding"
                android:onClick="recommendations"
                android:layout_weight="1" />

        </LinearLayout>

    </LinearLayout>


</ScrollView>
